<resources>
    <string name="app_name">Not finished yet!!!</string>
    <string name="Backing">Backing &amp; Batting</string>
    <string name="Fabric">Measurement Converter</string>
    <string name="pieceCount">Piece Counter</string>
    <string name="measurement_in_cm">Measurement in cm</string>
    <string name="measurement_in_meter">Measurement in meter</string>
    <string name="measurement_in_feet">Measurement in feet</string>
    <string name="measurement_in_inch">Measurement in inch</string>
    <string name="measurement_in_yard">Measurement in yard</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="calc">Calculate</string>
    <string-array name="units">
        <item>cm</item>
        <item>m</item>
        <item>inch</item>
        <item>inch fraction</item>
        <item>feet</item>
        <item>feet fraction</item>
        <item>yard</item>
        <item>yard fraction</item>
    </string-array>
    <string name="textView_string">0 cm\n0 m\n0 inches\n0 feet\n0 yard\n0 rational inch\n0 rational feet\n0 rational yard</string>
    <string name="title_activity_back_bat">BackBatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="cm">cm</string>
    <string name="inch">inch</string>
    <string name="width_of_fabrick">Width of fabric</string>
    <string name="dimention_of_quilt">Dimention of quilt</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="overage">Overage</string>
    <string name="width_inch">Width (inch)</string>
    <string name="length_inch">Length (inch)</string>
    <string name="yard">needed length (yard)</string>
    <string name="width_cm">Width (cm)</string>
    <string name="length_cm">Length (cm)</string>
    <string name="m">needed length (m)</string>
    <string name="recalc">Recalculate</string>
    <string name="title_activity_back_bat_result">BackBatResultActivity</string>
</resources>
