<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.magnus.oskar.quiltingcalc.StartActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:text="@string/Fabric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fabric" />

        <Button
            android:text="@string/Backing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/backing" />

        <Button
            android:text="@string/pieceCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/piece" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <fragment
            android:name="com.magnus.oskar.quiltingcalc.AddFragment"
            android:id="@+id/add_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
